added version to HistoryServlet output